# home_api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: aws.yml  aws_api.yml  aws_parser.yml
api/: .env.example  Dockerfile  Dockerfile.aws  pyproject.toml
api/auth/: consts.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  utils.py
api/core/: __init__.py  base.py  database.py  db_utils.py  main.py  metaclasses.py  mixins.py  routers.py  settings.py  utils.py
api/currency_parser/: .env.example  Dockerfile  consts.py  main.py  parser.py  pyproject.toml  settings.py  utils.py
api/graphql_app/: base.py  filters.py  metaclasses.py  mixins.py  pagination.py  permissions.py  router.py  schemas.py
api/migrations/models/: 0_20221220232700_init.py  0_20221223202049_init.py  0_20221229010901_init.py  1_20230102172805_update.py
api/news/: consts.py  models.py  router.py  schemas.py
api/v1/auth/: dependencies.py  models.py  router.py  utils.py
api/v1/graphql_app/: filters.py  mixins.py  permissions.py  router.py  schemas.py
api/v1/news/: consts.py  currency_parser.py  models.py  router.py
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.tsx
client/src/Components/CurrencyTable/: index.tsx
client/src/Components/Input/: index.tsx
client/src/Components/Login/: index.tsx  style.css
client/src/store/: store.ts
client/src/store/Login/: authSlice.js
client/src/utils/: api_login.ts
web/: Dockerfile  package-lock.json  package.json
web/src/: App.js
webserver/: .env.example  Dockerfile  nginx.conf
